# mcp-agent

./: .env.example  .gitignore  LICENSE  README.md  hello_agent.py  hello_mcp.py  pyproject.toml
src/mcp_agent/: __init__.py
src/mcp_agent/mcp_/: __init__.py  schema.py
src/mcp_agent/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
